--- a/MTGProxyDesk.csproj
+++ b/MTGProxyDesk.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <None Remove="card_back.png" />
+    <None Remove="img\bg.png" />
     <None Remove="scripts\cds.py" />
     <None Remove="img\card_back.png" />
     <None Remove="scripts\py_readme.md" />
@@ -22,6 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="img\bg.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="scripts\cds.py" />
     <Resource Include="img\card_back.png" />
     <Resource Include="scripts\py_readme.md" />
