Added Playmats and hand display - Sample playmat backgrounds are generated in documents folder on creation along with conversion script and a credits document with the location of the full-sized, non-compressed image - Added hand display window which is a singleton. It minimizes on close unless the static method "CloseInstance" is called to ensure users  don't lose access to their hand - Added sections to Play window. If it is not a commander deck, the commander slot (the one above the deck) will open up to allow for placing a card. - No play controls are currently implemented - Added methods for copying a card and for copying objects with no construction parameters

--- a/MTGProxyDesk.csproj
+++ b/MTGProxyDesk.csproj
@@ -9,10 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="card_back.png" />
-    <None Remove="img\bg.png" />
-    <None Remove="scripts\cds.py" />
     <None Remove="img\card_back.png" />
+    <None Remove="img\bg.png" />
+    <None Remove="img\playmat_black.png" />
+    <None Remove="img\playmat_blue.png" />
+    <None Remove="img\playmat_default.png" />
+    <None Remove="img\playmat_green.png" />
+    <None Remove="img\playmat_red.png" />
+    <None Remove="img\playmat_white.png" />
+    <None Remove="img\card_back.png" />
+	<None Remove="scripts\cds.py" />
     <None Remove="scripts\py_readme.md" />
   </ItemGroup>
 
@@ -26,8 +32,28 @@
     <Resource Include="img\bg.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="scripts\cds.py" />
-    <Resource Include="img\card_back.png" />
+    <Resource Include="img\playmat_black.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="img\playmat_blue.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="img\playmat_default.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="img\playmat_green.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="img\playmat_red.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="img\playmat_white.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="img\card_back.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+	<Resource Include="scripts\cds.py" />
     <Resource Include="scripts\py_readme.md" />
   </ItemGroup>
 
