V 1.0 - Now playable - Graveyard and exile now viewable. - Commander now playable - Remove card updated to only remove one, as is the likely use of the function - Added PlaySource enum to keep track of card origin - Added click event to MPDButton - Added sounds to signify shuffle and draw doing something - Added "Phase Out" to card slots - Added "Tap" to card slots - Implemented features for moving cards from card slot - Added ability to set alternate buttons for card control - Implemented card viewer - Added "Mulligan" button to view of initial hand - Added "Untap All" button to hand window - Added static method to windows to bring them to front - Added buttons to hand view controls - Moved PlayMat to windows folder

--- a/MTGProxyDesk.csproj
+++ b/MTGProxyDesk.csproj
@@ -18,12 +18,24 @@
     <None Remove="img\playmat_red.png" />
     <None Remove="img\playmat_white.png" />
     <None Remove="img\card_back.png" />
+    <None Remove="img\tap.png" />
 	<None Remove="scripts\cds.py" />
     <None Remove="scripts\py_readme.md" />
+    <None Remove="shuffle.wav" />
+    <None Remove="Sounds\draw.wav" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MtgApiManager.Lib" Version="2.3.3" />
+    <Content Include="Sounds\draw.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sounds\shuffle.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
     <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
   </ItemGroup>
@@ -51,6 +63,9 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="img\card_back.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="img\tap.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
 	<Resource Include="scripts\cds.py" />
